Fix: adjust goal text alignment

--- a/webapp/src/css/targets.less
+++ b/webapp/src/css/targets.less
@@ -125,6 +125,9 @@
         font-size: @font-small;
         font-weight: normal;
         color: @label-color;
+        &.pin-left {
+          margin-left: 0; /* left aligned */
+        }
         &.pin-right {
           margin-left: -100%; /* right aligned */
         }
